# sphinx-ads

./: .buildinfo  .gitignore  AUTHORS  CNAME  LICENSE  Makefile  README.md  README.rst  changelog.html  configuration.html  genindex.html  index.html  installation.html  json-file.html  noxfile.py  objects.inv  package.json  pyproject.toml  quickstart.html  search.html  searchindex.js  support.html  templating.html
.doctrees/: changelog.doctree  configuration.doctree  environment.pickle  index.doctree  installation.doctree  json-file.doctree  quickstart.doctree  support.doctree  templating.doctree
.doctrees/tutorial/: index.doctree
.github/workflows/: ci.yaml  docs.yaml  js_test.yml  release.yaml
_sources/: index.rst.txt  templating.rst.txt
_sources/tutorial/: index.rst.txt
_static/sphinx_ads/: sphinx_ads.js
docs/: ads.json  changelog.rst  conf.py  configuration.rst  docs-requirements.txt  index.rst  installation.rst  json-file.rst  quickstart.rst  support.rst  test.rst
docs/_templates/: layout.html
docs/tutorial/: index.rst
sphinx_ads/: __init__.py  ads.py  json_schema.json  json_validate.py  utils.py
sphinx_ads/directives/: advertisement.py
sphinx_ads/libs/css/: sphinx_ads.css
sphinx_ads/libs/js/: sphinx_ads.js
sphinx_ads/templates/: layout.py  sphinx_ads_default.html  template.py
tests/: conftest.py  test_basic_doc.py
tests/doc_test/doc_basic/: conf.py  index.rst
tests/js_test/cypress/e2e/: test-sphinx-ads.cy.js
tutorial/: index.html
